versioned_docs/version-7.1.0/api/area.mdx
---
title: area
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Calculates the geodesic area in square meters of one or more polygons.

### Parameters

| Name    | Type                                                         | Description                                                                               |
| ------- | ------------------------------------------------------------ | ----------------------------------------------------------------------------------------- |
| geojson | **[GeoJSON](https://tools.ietf.org/html/rfc7946#section-3)** | input polygon(s) as \{@link Geometry\}, \{@link Feature\}, or \{@link FeatureCollection\} |

### Returns

<ul>
  **number** area in square meters

</ul>

### Examples

```javascript
var polygon = turf.polygon([
  [
    [125, -15],
    [113, -22],
    [154, -27],
    [144, -15],
    [125, -15],
  ],
]);

var area = turf.area(polygon);
```

export function Map0() {
  "use strict";

  // jsdoc example start
  var polygon = turf.polygon([
    [
      [125, -15],
      [113, -22],
      [154, -27],
      [144, -15],
      [125, -15],
    ],
  ]);

  var area = turf.area(polygon);

  //addToMap
  var addToMap = { polygon };
  polygon.properties.area = area;
  // jsdoc example end

  return <ExampleMap addToMap={addToMap} />;
}

<!-- prettier-ignore -->
<BrowserOnly>{() => <Map0 />}</BrowserOnly>

### Installation

```javascript
$ npm install @turf/area

import { area } from "@turf/area";
const result = area(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.area(...);
```
